name:                m3u-converter
version:             0.1.0
synopsis:            Convert M3U files from one format to another
description:         Provides a library and executable
license:             MIT
license-file:        LICENSE
author:              siddharthist
maintainer:          langston.barrett@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable m3u-converter
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.9,
                       base-unicode-symbols,
                       optparse-applicative,
                       filepath,
                       parsec > 3 && < 4,
                       -- HaTeX > 3 && < 4, (for eventual tex output)
                       -- YAML dependencies
                       yaml > 0.8 && < 0.9,
                       text,
                       vector,
                       bytestring

-- https://stackoverflow.com/questions/20331209/haskell-unit-testing/20331512#20331512
Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, src
  build-depends:       base >=4.7 && <4.9,
                       -- copied from above
                       base-unicode-symbols,
                       optparse-applicative,
                       filepath,
                       parsec > 3 && < 4,
                       yaml > 0.8 && < 0.9,
                       text,
                       vector,
                       bytestring,
                       HUnit,
                       -- dependencies for tests themselves
                       test-framework,
                       test-framework-hunit
